tests/pass/run/ownership_explicit_move_ok/main.kira
struct Mesh {
    let id: Int
}

function consume(mesh: Mesh) -> Int {
    return mesh.id
}

@Main
function main() {
    var mesh = Mesh { id: 7 }
    print(consume(move mesh))
    return
}
